--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "url": "https://github.com/DMMDTOM/Demo_DMM_Test"
   },
   "dependencies": {
-    "qs": "5.0.4",
-    "node-uuid": "1.4.0"
+    "qs": "0.0.4",
+    "node-uuid": "1.4.0",
+    "ShellJS": "0.7.7",
+    "Express":" 4.14.0"
   }
 }
