--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "qs": "0.0.4",
     "node-uuid": "1.4.0",
-    "ShellJS": "0.7.7",
+    "angular": "1.3.0",
     "Express":" 4.14.0"
   }
 }
