--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "url": "https://github.com/DMMDTOM/Demo_DMM_Test"
   },
   "dependencies": {
-    "qs": "5.0.4",
-    "node-uuid": "1.4.0",
+    "qs": "6.0.4",
+    "node-uuid_x": "1.4.0",
     "angular": "1.3.0",
     "Express":" 4.14.0"
   }
