--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "qs": "6.0.4",
-    "node-uuid_x": "1.4.0",
+    "node-uuid": "1.4.0",
     "angular": "1.3.0",
     "Express":" 4.14.0"
   }
