--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
     "type": "git",
     "url": "https://github.com/DMMDTOM/Demo_DMM_Test"
   },
-  "dependencies": {}
+  "dependencies": {
+    "qs": "6.0.4",
+    "node-uuid": "1.4.0",
+    "angular": "1.3.0",
+    "Express":" 4.14.0"
+  }
 }
